; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cheat.c_CheatInit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cheat.c_CheatInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@cheatsize = common dso_local global i32 0, align 4
@cheatlist = common dso_local global %struct.TYPE_3__* null, align 8
@CHEATTYPE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CheatInit() #0 {
  %1 = alloca i32, align 4
  store i32 10, i32* @cheatsize, align 4
  %2 = load i32, i32* @cheatsize, align 4
  %3 = call i64 @calloc(i32 %2, i32 4)
  %4 = inttoptr i64 %3 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** @cheatlist, align 8
  %5 = icmp eq %struct.TYPE_3__* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %12

7:                                                ; preds = %0
  %8 = load i32, i32* @CHEATTYPE_NONE, align 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cheatlist, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i64 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %7, %6
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
